🐛 fix alignment

--- a/src/components/app/about/About.module.css
+++ b/src/components/app/about/About.module.css
@@ -1,6 +1,6 @@
 .description {
   color: white;
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 600;
   text-transform: uppercase;
 }
